feat: create reusable confirm dialog, prepopulate form article, and many more

--- a/src/app/modules/blog/pages/blog-create/blog-create.component.html
+++ b/src/app/modules/blog/pages/blog-create/blog-create.component.html
@@ -26,6 +26,7 @@
               label="Category"
               fieldName="category"
               [optionLabel]="'name'"
+              [optionValue]="'name'"
               [options]="categories">
             </app-input-dropdown>
             <div class="flex space-x-2">
