--- a/src/app/shared/components/pagination/pagination.component.scss
+++ b/src/app/shared/components/pagination/pagination.component.scss
@@ -2,7 +2,7 @@
 	z-index: 10;
 	background-color: green !important;
 	color: #fff;
-	outline: 2px solid green;
+	outline: 2px solid #008000;
 	outline-offset: 2px;
 }
 
