--- a/src/app/shared/components/card-blog/card-blog.component.html
+++ b/src/app/shared/components/card-blog/card-blog.component.html
@@ -2,7 +2,7 @@
   <div class="relative">
     <div (click)="onNavigate()">
       <a href="javascript: void(0);">
-        <img class="images" [lazyLoad]="article.images.url" alt="Article Images" />
+        <img class="images bg-cover bg-center" [lazyLoad]="article.images.url" alt="Article Images" />
       </a>
       <div class="on-hover">
       </div>
@@ -10,7 +10,6 @@
     <div class="absolute top-0 right-0 mt-3">
       <div *ngIf="editable else notEditable">
         <button class="remove-btn" (click)="onEdit()">
-
           <img [src]="editIcon" alt="Remove Button" class="edit-icon">
         </button>
         <button class="remove-btn" (click)="onRemove()">
@@ -29,11 +28,19 @@
     <span class="title">
       {{article.title | shortenerText: 30 }}
     </span>
-
+    <br>
     <div class="relative inline-block">
       <p class="subtitle" (mouseenter)="showTooltip()" (mouseleave)="hideTooltip()">
         {{ article.subtitle | shortenerText: 80 }}
       </p>
+    </div>
+  </div>
+
+  <div class="px-6 pb-2">
+    <div class="flex flex-wrap gap-1">
+      <div *ngFor="let tag of article.tags | slice: 0:3">
+        <div><span class="tags">#{{tag}}</span></div>
+      </div>
     </div>
   </div>
 
@@ -42,12 +49,14 @@
       <img [src]="iconTime" alt="time" class="h-5 w-5" />
       <span class="ml-1">{{article.createdAt! | timeAgo }}</span>
     </span>
-    <!-- <span class="py-1 text-xs font-regular text-gray-900 mr-1 flex flex-row items-center">
+    <!--
+      <span class="py-1 text-xs font-regular text-gray-900 mr-1 flex flex-row items-center">
       <svg class="h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
           d="M7 8h10M7 12h4m1 8l-4-4H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-3l-4 4z"></path>
       </svg>
       <span class="ml-1">39 Comments</span>
-    </span> -->
+      </span>
+    -->
   </div>
 </div>
