--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,71 +1,61 @@
-<nav class="absolute w-full top-0 left-0 h-screen z-50 {{
-    isSidebarShowing ? 'flex' : 'hidden'
-  }}">
-  <div class="bg-white w-full md:max-w-sm shadow-2xl">
-    <div class="flex justify-end p-5">
-      <img [src]="iconClosed" alt="close" (click)="this.closeSideBar()" class="w-8 h-8">
-    </div>
-    <div>
-      <div class="mt-3">
-        <app-phone></app-phone>
-      </div>
-      <div class="mt-3">
-        <app-email></app-email>
-      </div>
-      <div class="mt-6">
-        <app-auth-link></app-auth-link>
-      </div>
-      <div class="mt-6">
-        <app-menu [items]="menuitems"></app-menu>
-      </div>
-      <div class="mt-6">
-        <app-social-icon></app-social-icon>
-      </div>
-    </div>
+<nav class="bg-white border-gray-200">
+  <div class="container text-white py-2 bg-gray-900">
+    <ul class="flex justify-around gap-4">
+      <li> <app-phone></app-phone> </li>
+      <li> <app-email></app-email> </li>
+      <li> <app-social-icon></app-social-icon> </li>
+    </ul>
   </div>
-  <div (click)="this.closeSideBar()" class="bg-gray-900 hidden md:block md:w-full opacity-60"></div>
-</nav>
-<header class="w-full z-40">
-  <div class="bg-[#1C263C] hidden lg:block">
-    <div class="container text-white py-2">
-      <ul class="flex justify-around  gap-4">
-        <li>
-          <app-phone></app-phone>
-        </li>
-        <li>
-          <app-email></app-email>
-        </li>
-        <li>
-        </li>
-        <li>
-          <app-social-icon></app-social-icon>
+  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+    <div class="hidden md:block lg:block">
+      <app-brand-logo [height]="100" [width]="100"></app-brand-logo>
+    </div>
+
+    <div class="sm:hidden">
+      <app-dropdown-flags></app-dropdown-flags>
+    </div>
+
+    <div class="flex items-center md:order-2">
+      <div class="hidden md:block lg:block">
+        <app-dropdown-flags></app-dropdown-flags>
+      </div>
+
+      <div>
+        <div *ngIf="!isTokenAvailable else login;">
+          <a routerLink="/login" class="login-btn">Login</a>
+        </div>
+
+        <ng-template #login>
+          <div #container clickOutside (clickOutside)="handleClickOutside()">
+            <app-dropdown-profile [avatar]="avatar" [username]="username" [showDropdown]="showDropdown"
+              (clicked)="toggleDropdown()" (logout)="logout()">
+            </app-dropdown-profile>
+          </div>
+        </ng-template>
+      </div>
+
+      <button (click)="changeMenuIcon()" data-collapse-toggle="navbar-language" type="button" class="hamburger-btn"
+        aria-controls="navbar-language" aria-expanded="false">
+        <span class="sr-only">Open main menu</span>
+        <img *ngIf="!isIconChanged" [src]="iconOpen" alt="hamburger" class="w-8 h-8" />
+        <img *ngIf="isIconChanged" [src]="iconClosed" alt="close" class="w-8 h-8">
+      </button>
+    </div>
+
+    <!-- navbar -->
+    <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-language">
+      <ul
+        class="effects flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white">
+        <li *ngFor="let item of menuitems;">
+          <a class="block py-2 bg-white rounded bg-transparent text-[#455268] md:p-0" [routerLink]="item.route"
+            routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
+            aria-current="page"><span>{{item.title}}</span></a>
         </li>
       </ul>
     </div>
   </div>
-  <div class="px-4 lg:px-0 md:px-0 {{ scrolledStyled() }}">
-    <div class="py-5 px-2 flex items-center justify-between container {{
-        isMenuScrolled ? '' : 'border'
-      }} border-gray-500 border-opacity-30">
-      <app-brand-logo></app-brand-logo>
-      <div class="lg:hidden">
-        <img [src]="iconOpen" alt="hamburger" (click)="this.openSideBar()" class="w-8 h-8">
-      </div>
-      <app-menu class="hidden lg:block" [items]="menuitems"></app-menu>
-
-      <div *ngIf="!isTokenAvailable">
-        <a routerLink="/login" class="login-btn">Login</a>
-      </div>
-
-      <div *ngIf="isTokenAvailable">
-        <div #container clickOutside (clickOutside)="handleClickOutside()">
-          <app-dropdown-profile [avatar]="avatar" [username]="username" [showDropdown]="showDropdown" (clicked)="toggleDropdown()" (logout)="logout()"></app-dropdown-profile>
-        </div>
-      </div>
-    </div>
-  </div>
-</header>
+</nav>
 
 <button *ngIf="isMenuScrolled" (click)="scrollToTop()" class="scrolling z-50">
-  <img [src]="iconArrowUp" alt="" class="w-6 h-6 m-auto arrow">
+  <img [src]="iconArrowUp" alt="Scroll to Top" class="w-6 h-6 m-auto arrow">
 </button>
