--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -9,3 +9,110 @@
 .login-btn {
 	@apply p-2 lg:px-4 md:mx-2 text-green-600 text-center border border-solid border-green-600 rounded hover:bg-green-600 hover:text-white transition-colors duration-300 mt-1 md:mt-0 md:ml-1;
 }
+
+.hamburger-btn {
+	@apply inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200;
+}
+
+.list {
+	@apply flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white;
+
+	a {
+		@apply block py-2 bg-white rounded bg-transparent text-[#455268] md:p-0;
+	}
+}
+
+a.active {
+	color: rgb(22 163 74);
+}
+
+.effects a {
+	@media screen and (min-width: 1024px) {
+		display: inline-block;
+		overflow: hidden;
+		position: relative;
+	}
+}
+
+.effects a > span {
+	display: block;
+	font-weight: 600;
+	text-align: center;
+}
+
+.effects span {
+	padding: 10px;
+}
+
+.effects a:before,
+.effects a:after,
+.effects a > span:before,
+.effects a > span:after {
+	content: '';
+	background: rgba(2, 2, 2, 0.3);
+	position: absolute;
+	transition: all 0.3s ease 0s;
+}
+
+.effects a:before,
+.effects a:after {
+	bottom: 0;
+	right: 0;
+}
+
+.effects a:before {
+	width: 100%;
+	height: 1px;
+	transform: translateX(-100%);
+	transition-delay: 0.9s;
+}
+
+.effects a:after {
+	width: 1px;
+	height: 100%;
+	transform: translateY(100%);
+	transition-delay: 0.6s;
+}
+
+.effects a > span:before,
+.effects a > span:after {
+	top: 0;
+	left: 0;
+}
+
+.effects a > span:before {
+	width: 100%;
+	height: 1px;
+	transform: translateX(100%);
+	transition-delay: 0.3s;
+}
+
+.effects a > span:after {
+	width: 1px;
+	height: 100%;
+	transform: translateY(-100%);
+	transition-delay: 0s;
+}
+
+.effects a:hover:before,
+.effects a:hover:after,
+.effects a:hover > span:before,
+.effects a:hover > span:after {
+	transform: translate(0, 0);
+}
+
+.effects a:hover:before {
+	transition-delay: 0s;
+}
+
+.effects a:hover:after {
+	transition-delay: 0.3s;
+}
+
+.effects a:hover > span:before {
+	transition-delay: 0.6s;
+}
+
+.effects a:hover > span:after {
+	transition-delay: 0.9s;
+}
