--- a/src/app/shared/components/menu/menu.component.scss
+++ b/src/app/shared/components/menu/menu.component.scss
@@ -1,40 +1,40 @@
-ul {
-	@apply lg:flex font-semibold text-[#455268] text-lg gap-8 xl:gap-7;
+// ul {
+// 	@apply lg:flex font-semibold text-[#455268] text-lg gap-8 xl:gap-7;
 
-	li {
-		@apply p-3 border-t lg:border-0;
+// 	li {
+// 		@apply p-3 border-t lg:border-0;
 
-		a.active {
-			color: rgb(22 163 74);
-		}
-	}
-}
+// 		a.active {
+// 			color: rgb(22 163 74);
+// 		}
+// 	}
+// }
 
-li.different {
-	border: none;
-	position: relative;
-}
+// li.different {
+// 	border: none;
+// 	position: relative;
+// }
 
-li.different:hover {
-	border: none;
-}
+// li.different:hover {
+// 	border: none;
+// }
 
-li:hover {
-	border-bottom: 5px solid rgb(22 163 74);
-}
+// li:hover {
+// 	border-bottom: 5px solid rgb(22 163 74);
+// }
 
-.different::after {
-	content: '';
-	position: absolute;
-	width: 0px;
-	height: 5px;
-	left: 50%;
-	bottom: 0;
-	background-color: rgb(22 163 74);
-	transition: all ease-in-out 0.2s;
-}
+// .different::after {
+// 	content: '';
+// 	position: absolute;
+// 	width: 0px;
+// 	height: 5px;
+// 	left: 50%;
+// 	bottom: 0;
+// 	background-color: rgb(22 163 74);
+// 	transition: all ease-in-out 0.2s;
+// }
 
-.different:hover::after {
-	width: 100%;
-	left: 0;
-}
+// .different:hover::after {
+// 	width: 100%;
+// 	left: 0;
+// }
