--- a/src/app/shared/components/dropdown-flags/dropdown-flags.component.scss
+++ b/src/app/shared/components/dropdown-flags/dropdown-flags.component.scss
@@ -1,11 +1,23 @@
-.wrapper {
-	@apply flex items-center md:order-2;
+button {
+  @apply inline-flex items-center font-medium justify-center px-4 py-2 text-sm text-gray-900 dark:text-white rounded-lg cursor-pointer hover:bg-gray-100 dark:hover:bg-gray-700 dark:hover:text-white;
+}
 
-	.default {
-		@apply inline-flex items-center font-medium justify-center px-4 py-2 text-sm text-gray-900 dark:text-white rounded-lg cursor-pointer hover:bg-gray-100 dark:hover:bg-gray-700 dark:hover:text-white;
+img {
+  @apply w-5 h-5 mr-2 rounded-full;
+}
 
-		img {
-			@apply w-5 h-5 mr-2 rounded-full;
-		}
-	}
+.dropdown {
+  @apply absolute mt-2 z-10 bg-white divide-y divide-gray-100 rounded-lg shadow w-44;
+
+  ul {
+    @apply py-2 font-medium;
+
+    a {
+      @apply block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100;
+
+      div {
+        @apply inline-flex items-center;
+      }
+    }
+  }
 }
