--- a/src/app/modules/contact/contact.component.html
+++ b/src/app/modules/contact/contact.component.html
@@ -19,7 +19,7 @@
         </div>
       </div>
       <div class="form-wrapper">
-        <h2>Feedback</h2>
+        <h1 translate>app.feedback</h1>
         <p>{{contactInformation.header}}</p>
 
         <form [formGroup]="form">
